make icon smaller, use fixed height & width for component.

--- a/src/routes/Project/Workspace/Designer/TopSingleComponent.less
+++ b/src/routes/Project/Workspace/Designer/TopSingleComponent.less
@@ -1,17 +1,25 @@
 .component {
   text-align: center;
-  padding: 2px 5px;
-  width: 90px;
-  height: 80px;
+  width: 70px;
+  height: 90px;
   display: inline-block;
-  margin: 10px;
+  margin: 5px;
+  padding: 5px;
   word-break: break-all;
   vertical-align: top;
-  font-size: 0.9em;
+  font-size: 12px;
+  border: 1px solid #ced4d900;
 }
 
-.component :hover {
-  background: '#1890FF';
-  color: 'white';
-  cursor: 'move';
+.componentName {
+  word-wrap: none;
+  word-break: break-all;
+  white-space: normal;
+}
+
+.component:hover {
+  background: white;
+  border: 1px solid #ced4d9;
+  border-radius: 10px;
+  cursor: move;
 }
