--- a/src/routes/Project/Workspace/WorkCanvas/icon.less
+++ b/src/routes/Project/Workspace/WorkCanvas/icon.less
@@ -12,12 +12,12 @@
   }
 
   .x-icon {
-    @width: 86;
-    @height: 86;
+    @width: 64;
+    @height: 64;
     width: @height*1px;
     height: @width*1px;
     .icon-common;
-    margin: 6px auto;
+    margin: 3px auto;
     background-size: 1200%;
 
     &.icon-csv-source {
