--- a/src/routes/Project/Workspace/WorkCanvas/styles.less
+++ b/src/routes/Project/Workspace/WorkCanvas/styles.less
@@ -57,6 +57,7 @@
   border-radius: 10px;
   box-shadow: 6px 6px 3px #acacacaa;
   cursor: move;
+  font-size: 12px;
 }
 
 .nodeTip {
